--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,6 @@
 *.ply filter=lfs diff=lfs merge=lfs -text
 *.cwicpc filter=lfs diff=lfs merge=lfs -text
 *.asset filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+*.hdr filter=lfs diff=lfs merge=lfs -text
+*.unitypackage filter=lfs diff=lfs merge=lfs -text
